--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,15 @@
     ]
   },
   "dependencies": {
-    "@redwoodjs/auth": "^0.27.1",
-    "@redwoodjs/forms": "^0.27.1",
-    "@redwoodjs/router": "^0.27.1",
-    "@redwoodjs/web": "^0.27.1",
+    "@redwoodjs/auth": "^0.30.0",
+    "@redwoodjs/forms": "^0.30.0",
+    "@redwoodjs/router": "^0.30.0",
+    "@redwoodjs/web": "^0.30.0",
     "netlify-identity-widget": "^1.9.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "tailwindcss-filters": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "9.8.6",
